--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,15 @@ h2 {
   line-height: 2.5rem;
 }
 
+h3 {
+  font-size: 1.5rem;
+  color: #231f20;
+  padding-right: 2rem;
+  padding-bottom: 1rem;
+  line-height: 2.5rem;
+  font-weight: 200;
+}
+
 .formTemplate {
   display: flex;
   align-items: center;
@@ -99,6 +108,49 @@ h2 {
   line-height: 2.5rem;
 }
 
+.basicCheckBox {
+  accent-color: #0075bc;
+  margin: 1rem;
+  size: 8vh;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+}
+
+.basicInputBox {
+  border: 1px, solid, #231f20;
+  border-radius: 4px;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
+
+.basicDropdown {
+  border: 1px, solid, #231f20;
+  border-radius: 4px;
+  padding: 0.5rem;
+  margin: 0.5rem; 
+  accent-color: #0075bc;
+  width: 250px;
+  text-align: center;
+}
+
+.basicTable {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.basicTable th,
+.basicTable td {
+  border: 1px solid #ccc;
+  padding: 8px 12px;
+}
+
+.basicTable th {
+  background: #f4f4f4;
+  font-weight: bold;
+  text-align: left;
+}
+
 ul {
   list-style-type: disc;
   margin-left: 1.5rem;
@@ -108,3 +160,9 @@ ul {
 li {
   margin-bottom: 0.5rem;
 }
+
+label {
+  display: block;
+  margin-bottom: 0.75rem;
+}
+
