--- a/app/globals.css
+++ b/app/globals.css
@@ -187,6 +187,14 @@ label {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.rowBold {
+  font-weight: bold;
+}
+
+.rowBold td {
+  font-weight: bold;
+}
+
 
 .basicFormList ol {
   list-style: decimal;
