Add MI Solar Community Benefits table

--- a/app/globals.css
+++ b/app/globals.css
@@ -176,13 +176,13 @@ label {
 }
 
 .rowHighlight {
-  background-color: #d4ffd6;
+  background-color: #ccebff;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .rowHighlight td {
-  background-color: #d4ffd6;
+  background-color: #ccebff;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
