--- a/app/globals.css
+++ b/app/globals.css
@@ -211,6 +211,10 @@ label {
   padding-left: 0.5rem;
 }
 
+.required_alt {
+  padding-left: 0.45rem;
+}
+
 
 .inputWithInfo {
   display: flex;
@@ -219,10 +223,7 @@ label {
   position: relative;  /* needed for tooltip positioning */
 }
 
-.inputWithInfo input,
-.inputWithInfo select {
 
-}
 
 .infoWrapper {
   display: inline-flex;  /* keep inline for flex layout, allows hover to work */
@@ -269,4 +270,32 @@ label {
   border-width: 5px;
   border-style: solid;
   border-color: #333 transparent transparent transparent;
+}
+
+.buttonContainer {
+  display: flex;            /* arrange children side-by-side */
+  flex-wrap: wrap;          /* wrap to next line if there’s not enough space */
+}
+
+.inPageButton {
+  background-color: #0075bc;
+  color: #ffffff;
+  width: 200px;
+  min-height: 80px;
+  padding: 1rem;
+  border-radius: 4px;
+  margin-right: 0.5rem;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: normal;
+  line-height: 1.2;
+}
+
+.inPageButton:hover {
+  color: #231f20;
+  transition: 0.3s;
 }
